--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+	
+
+		<dependency>
+			<groupId>com.navercorp.pinpoint</groupId>
+			<artifactId>pinpoint-mysql-jdbc-driver-plugin</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
