--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/login
 spring.datasource.username=login
 spring.datasource.password=login
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: false
+spring.web.resources.static-locations=classpath:/static/
+
+spring.jpa.show-sql: true
